2019-11-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib_dialog.c: Remove unused second argument from create_geda_switch.

    * src/s_table.c: Update s_table_add_items_to_comp_table documentation.

2019-11-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_gtksheet.c: Enable on_move callback, change underscores to hyphens in
      gtksheet signal names and add function documentation:

          * x_gtksheet_reveal_columns
          * on_move

  ** src/gtksheet/gtksheet.c: Fix BUG in gtksheet; old_range always -1 when
      "move-range" signal emitted, set old_range before unselecting old_range.

2019-11-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_dialog.c: Revise x_dialog_new_attrib to utilize an ancillary
      container and accessor macro gtk_dialog_get_content_area.

    * src/x_gtksheet.c: Revise build_popup_menu to set the DeleteAttribute popup
      menu item insensitive if more than one column is selected.

    * src/x_menus.c: Remove inappropriate call to x_dialog_unimplemented_feature
      because the feature is implemented.

    * src/x_toolbars.c: Add delete attribute button to the Attribute toolbar.

2019-10-26 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.

    * po/nl.po: Update Dutch translations.

    * po/ru.po: Update Russian translations.

2019-10-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_window.c: Revamp x_window_blank_document to eliminate accessing
      structure members directly.

2019-10-23 Wiley E. Hill <wileyhill@gmail.com>

    * gattrib/src/s_object.c: Reduce scope of pointers old_attrib_text and
      old_attrib_nam in s_object_replace_attrib_in_object, factor releasing
      old_attrib_text from both clause of conditional.

    * src/s_toplevel.c: Remove s_toplevel_update_pin_attribs_in_toplevel
      entry debug output.

    * src/x_menus.c: Replace g_object_ref with g_object_ref_sink.

    * src/x_window.c: Replace g_object_ref with g_object_ref_sink.
