@@ -4,6 +4,8 @@
 
     * src/s_table.c: Update s_table_add_items_to_comp_table documentation.
 
+    * src/x_gtksheet.c: Update x_gtksheet_add_col_labels documentation.
+
 2019-11-06 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/x_gtksheet.c: Enable on_move callback, change underscores to hyphens in
